--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <title>Movie app</title>
 </head>
 <body>
+    <main>
+        <div class="movie">
+            <img src="https://image.tmdb.org/t/p//w1280/aWeKITRFbbwY8txG5uCj4rMCfSP.jpg" alt="">
+            <div class="movie-info">
+                <h3>Movie title</h3>
+                <span>6.3</span>
+
+            </div>
+        </div>
+
+
+
+
+    </main>
 
   
 
