--- a/index.html
+++ b/index.html
@@ -5,26 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/reset.css">
+  
     <title>Movie app</title>
 </head>
 <body>
-    <main>
-        <div class="movie">
-            <img src="https://image.tmdb.org/t/p//w1280/aWeKITRFbbwY8txG5uCj4rMCfSP.jpg" alt="">
-            <div class="movie-info">
-                <h3>Movie title</h3>
-                <span>6.3</span>
-
-            </div>
-        </div>
-
-
-
-
-    </main>
-
-  
+    <main></main>
 
     <script src="app.js"></script>
 </body>
