--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>Movie app</title>
 </head>
 <body>
+    <header>
+        <input type="text" id="search" placeholder="Search movie">
+    </header>
     <main></main>
 
     <script src="app.js"></script>
