--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <header>
-        <input type="text" id="search" placeholder="Search movie">
+             <form id="form">
+                            <input type="text" 
+                            placeholder="Search movie" 
+                            class="search">
+            </form>
     </header>
     <main></main>
 
