--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                             class="search">
             </form>
     </header>
-    <main></main>
+    <main id="main"></main>
 
     <script src="app.js"></script>
 </body>
