--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
              <form id="form">
                             <input type="text" 
+                            id="search"
                             placeholder="Search movie" 
                             class="search">
             </form>
