--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
                            
             </form>
     </header>
-    <main id="main"></main>
+    <main id="main">
+        
+    </main>
     <footer>
         <nav aria-label="...">
             <ul class="pagination">
