--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </form>
     </header>
     <main id="main">
-        
+
     </main>
     <footer>
         <nav aria-label="...">
@@ -29,12 +29,7 @@
                 <span class="page-link">Previous</span>
               </li>
               <li class="page-item"><a class="page-link" href="#">1</a></li>
-              <li class="page-item active">
-                <span class="page-link">
-                  2
-                  <span class="sr-only">(current)</span>
-                </span>
-              </li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>             
               <li class="page-item"><a class="page-link" href="#">3</a></li>
               <li class="page-item">
                 <a class="page-link" href="#">Next</a>
